Mon Apr  9 21:54:44 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_pkcs_decode_identifier to decode the public key's
	  identifier.  Affected file lib/silccrypt/silpkcs.[ch].
	  Added also silc_pkcs_free_identifier.  Added also new context
	  SilcPublicKeyIdentifier.

	* Added -S option to the silc client.  It is used to dump the
	  contents of the specified public key file.

	* Changed the PKCS api to return the public key length when
	  setting the public key.

	* Fixed a fatal bug in the public and private key file loading.
	  Affected file lib/silccrypt/silcpkcs.c.

	* Execute the packet parsing for client with zero (0) timeout
	  if the protocol is active.  Affected file silcd/server.c.

Sun Apr  8 19:30:56 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Made the key generation options to the silcd program.  Added
	  -C option, equivalent to client's option.

	* Added new [ServerKeys] config section to the server.  It
	  configures the server's public and private key.

	* Defined generic Public Key Payload into the protocol
	  specification to send specific type of public keys and
	  certificates.

	* Defined new command SILC_COMMAND_GETKEY to fetch a client's
	  public key or certificate.

	* Implemented the GETKEY command to the server and to the
	  client library and on user interface.

Sun Apr  8 01:37:21 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Made preliminary `make install' work.

Thu Apr  5 17:42:30 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added SilcServerRekey context into silcd/idlist.h.

	* Added the PFS support as defined in the specification to the
	  SKE protocol.  Affected files lib/silcske/*.c.

	* Added `ske_group' field to the SilcServerRekey context to hold
	  the number of the SKE group that is used with PFS in re-key.
	  Affected file silcd/idlist.h.

	* Added PFS re-key support to the server.  Affected file is
	  silcd/protocol.c.
